// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldLine /> should display invalid correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FieldLine
    field={
      Object {
        "disabled": false,
        "id": "unitInput",
        "name": "unitInput",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      }
    }
    label="unitLabel"
    meta={
      Object {
        "error": null,
        "isRequired": false,
        "isValidating": false,
        "plaintext": false,
        "stringFormatter": [MockFunction],
        "touched": false,
        "valid": false,
      }
    }
  >
    <div>
      children
    </div>
  </FieldLine>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="text-right"
          htmlFor="unitInput"
        >
          <FormComponent(FormText)
            text="unitLabel"
          />
        </label>,
        <div
          className="input-container"
        >
          <div>
            children
          </div>
          <FieldError
            error={null}
            id="unitInput_errors"
            invalid={true}
            stringFormatter={[MockFunction]}
          />
        </div>,
      ],
      "className": "field-group is-invalid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FormComponent(FormText)
              text="unitLabel"
            />,
            null,
          ],
          "className": "text-right",
          "htmlFor": "unitInput",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "unitLabel",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              children
            </div>,
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={true}
              stringFormatter={[MockFunction]}
            />,
          ],
          "className": "input-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "children",
            },
            "ref": null,
            "rendered": "children",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": null,
              "id": "unitInput_errors",
              "invalid": true,
              "stringFormatter": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="text-right"
            htmlFor="unitInput"
          >
            <FormComponent(FormText)
              text="unitLabel"
            />
          </label>,
          <div
            className="input-container"
          >
            <div>
              children
            </div>
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={true}
              stringFormatter={[MockFunction]}
            />
          </div>,
        ],
        "className": "field-group is-invalid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <FormComponent(FormText)
                text="unitLabel"
              />,
              null,
            ],
            "className": "text-right",
            "htmlFor": "unitInput",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "unitLabel",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                children
              </div>,
              <FieldError
                error={null}
                id="unitInput_errors"
                invalid={true}
                stringFormatter={[MockFunction]}
              />,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "children",
              },
              "ref": null,
              "rendered": "children",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "error": null,
                "id": "unitInput_errors",
                "invalid": true,
                "stringFormatter": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<FieldLine /> should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FieldLine
    field={
      Object {
        "disabled": false,
        "id": "unitInput",
        "name": "unitInput",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      }
    }
    label="unitLabel"
    meta={
      Object {
        "error": null,
        "isRequired": false,
        "isValidating": false,
        "plaintext": false,
        "stringFormatter": [MockFunction],
        "touched": false,
        "valid": true,
      }
    }
  >
    <div>
      children
    </div>
  </FieldLine>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="text-right"
          htmlFor="unitInput"
        >
          <FormComponent(FormText)
            text="unitLabel"
          />
        </label>,
        <div
          className="input-container"
        >
          <div>
            children
          </div>
          <FieldError
            error={null}
            id="unitInput_errors"
            invalid={false}
            stringFormatter={[MockFunction]}
          />
        </div>,
      ],
      "className": "field-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FormComponent(FormText)
              text="unitLabel"
            />,
            null,
          ],
          "className": "text-right",
          "htmlFor": "unitInput",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "unitLabel",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              children
            </div>,
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={false}
              stringFormatter={[MockFunction]}
            />,
          ],
          "className": "input-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "children",
            },
            "ref": null,
            "rendered": "children",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": null,
              "id": "unitInput_errors",
              "invalid": false,
              "stringFormatter": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="text-right"
            htmlFor="unitInput"
          >
            <FormComponent(FormText)
              text="unitLabel"
            />
          </label>,
          <div
            className="input-container"
          >
            <div>
              children
            </div>
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={false}
              stringFormatter={[MockFunction]}
            />
          </div>,
        ],
        "className": "field-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <FormComponent(FormText)
                text="unitLabel"
              />,
              null,
            ],
            "className": "text-right",
            "htmlFor": "unitInput",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "unitLabel",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                children
              </div>,
              <FieldError
                error={null}
                id="unitInput_errors"
                invalid={false}
                stringFormatter={[MockFunction]}
              />,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "children",
              },
              "ref": null,
              "rendered": "children",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "error": null,
                "id": "unitInput_errors",
                "invalid": false,
                "stringFormatter": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<FieldLine /> should show a required marker 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FieldLine
    field={
      Object {
        "disabled": false,
        "id": "unitInput",
        "name": "unitInput",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      }
    }
    label="unitLabel"
    meta={
      Object {
        "error": null,
        "isRequired": true,
        "isValidating": false,
        "plaintext": false,
        "stringFormatter": [MockFunction],
        "touched": false,
        "valid": false,
      }
    }
  >
    <div>
      children
    </div>
  </FieldLine>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="text-right"
          htmlFor="unitInput"
        >
          <FormComponent(FormText)
            text="unitLabel"
          />
          <span
            className="field-required"
          >
             *
          </span>
        </label>,
        <div
          className="input-container"
        >
          <div>
            children
          </div>
          <FieldError
            error={null}
            id="unitInput_errors"
            invalid={true}
            stringFormatter={[MockFunction]}
          />
        </div>,
      ],
      "className": "field-group is-invalid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FormComponent(FormText)
              text="unitLabel"
            />,
            <span
              className="field-required"
            >
               *
            </span>,
          ],
          "className": "text-right",
          "htmlFor": "unitInput",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "unitLabel",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " *",
              "className": "field-required",
            },
            "ref": null,
            "rendered": " *",
            "type": "span",
          },
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              children
            </div>,
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={true}
              stringFormatter={[MockFunction]}
            />,
          ],
          "className": "input-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "children",
            },
            "ref": null,
            "rendered": "children",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": null,
              "id": "unitInput_errors",
              "invalid": true,
              "stringFormatter": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="text-right"
            htmlFor="unitInput"
          >
            <FormComponent(FormText)
              text="unitLabel"
            />
            <span
              className="field-required"
            >
               *
            </span>
          </label>,
          <div
            className="input-container"
          >
            <div>
              children
            </div>
            <FieldError
              error={null}
              id="unitInput_errors"
              invalid={true}
              stringFormatter={[MockFunction]}
            />
          </div>,
        ],
        "className": "field-group is-invalid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <FormComponent(FormText)
                text="unitLabel"
              />,
              <span
                className="field-required"
              >
                 *
              </span>,
            ],
            "className": "text-right",
            "htmlFor": "unitInput",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "unitLabel",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " *",
                "className": "field-required",
              },
              "ref": null,
              "rendered": " *",
              "type": "span",
            },
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                children
              </div>,
              <FieldError
                error={null}
                id="unitInput_errors"
                invalid={true}
                stringFormatter={[MockFunction]}
              />,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "children",
              },
              "ref": null,
              "rendered": "children",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "error": null,
                "id": "unitInput_errors",
                "invalid": true,
                "stringFormatter": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
